--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,7 @@ version: '3.7'
 
 services:
   j:
-    image: 'jupyter/minimal-notebook'
+    build: .
     volumes:
       - './:/home/jovyan/work'
     ports:
